[project]
name = "rsi-divergence-scanner"
version = "0.1.6"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "pyzmq>=27.0.0,<28.0.0",
  "orjson>=3.10.18,<4.0.0",
  "pandas>=2.3.0,<3.0.0",
  "ta>=0.11.0,<0.12.0",
  "aiohttp>=3.12.13,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
